@@ -176,6 +176,11 @@
                       Loading content
                     </a>
                   </li>
+                  <li class="navigation__item">
+                    <a href="/right-to-left/" class="navigation__link"{% if page.pageId == 'right-to-left' %} aria-current="page"{% endif %}>
+                      Right to left
+                    </a>
+                  </li>
                 </ul>
               
               </nav>
