@@ -45,6 +45,9 @@
 .css-search {
   background: url("/assets/img/shared/sprite-for-css-only.svg#css-search") 50% 50% no-repeat;
 }
+.css-search-rtl {
+  background: url("/assets/img/shared/sprite-for-css-only.svg#css-search-rtl") 50% 50% no-repeat;
+}
 .css-carret {
   background: url("/assets/img/shared/sprite-for-css-only.svg#css-carret") 50% 50% no-repeat;
 }
