@@ -42,6 +42,8 @@
  */
 $path-images  : '../img/shared/';
 
+$rtl-option: true;
+
 
 @import "reusable-components/design-system-config";
 @import "reusable-components/design-system-reset";
