@@ -179,6 +179,16 @@ section: fe-guidelines
     Applies <code>border-radius: 50%</code> to element.
   </div>
 </div>
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49">
+    <pre class=" language-markup"><code>&lt;span <strong>class="mirror"</strong>&gt;
+</code></pre>
+  </div>
+  <div class="w49 flex-self-vcenter">
+    Applies <code>transform: rotateY(180deg);</code> to element (useful for some <a href="/right-to-left/">RTL adaptations</a>).
+  </div>
+</div>
+
 
 
 <div class="flex flex-spacebetween mb2 onmobile-flex-column">
