@@ -3,6 +3,12 @@
 ## New
 
 - Tooltips styles
+- RTL documentation
+- added class `.mirror` in `sprite-for-css-only.svg` and in `_design-system-layout-modules.scss`
+
+## Updated/fixes
+
+- Missing paths `$path-images` in `_pm-loadingcontent.scss`
 
 ## Misc
 
